--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ name: Hikabrain
 version: 1.0
 author: Tweikow
 main: fr.tweikow.hikabrain.Main
+commands:
+  hikabrain:
+    aliases:
+      - h
+      - hika
