--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,23 @@
     <groupId>groupId</groupId>
     <artifactId>Hikabrain</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            <id>mrcubee-public</id>
+            <url>https://nexus.mrcubee.net/repository/minecraft/</url>
         </repository>
     </repositories>
 
@@ -19,7 +31,19 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
+            <version>1.16.5-R0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.mrcubee.minecraft.library</groupId>
+            <artifactId>scoreboard</artifactId>
+            <version>1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.mrcubee.minecraft.library</groupId>
+            <artifactId>packets</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
