--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,9 @@
 
 hikabrain:
   permission: "hikabrain.staff"
+  world: "world" # Nom du monde ou ce trouve la partie
+  waiting_room:
+    # Définir la salle d'attente avec /hikabrain set waiting
   waiting_max: 2
   points: 5 # Nombre de point requis pour terminé la partie
   dead_zone:
@@ -27,4 +30,5 @@ messages:
     - "&8≫ &e/hikabrain start &8≫ &7Permet de lancer la partie"
     - "&8≫ &e/hikabrain restart &8≫ &7Permet de relancer la partie"
     - "&8≫ &e/hikabrain set team <bleu/rouge> &8≫ &7Permet de définir le point d'apparition des équipes"
+    - "&8≫ &e/hikabrain set waiting &8≫ &7Permet de définir le point de la file d'attente"
     - "&8≫ &e/hikabrain set maxplayers <nombre> &8≫ &7Permet de définir le nombre maximum de joueur par equipe"
