--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,10 +13,10 @@ hikabrain:
   dead_zone:
     y: 7 # Permet de définir la hauteur qui vous fait respawn ( Chute dans le vide )
   team:
-    bleu:
+    blue:
       spawn:
       # Pour définir le lit: il faut posé des blocs de laine Bleu
-    rouge:
+    red:
       spawn:
       # Pour définir le lit: il faut posé des blocs de laine Rouge
 
@@ -29,6 +29,6 @@ messages:
     - "&8≫ &e/hikabrain leave &8≫ &7Permet de quitter la file d'attente"
     - "&8≫ &e/hikabrain start &8≫ &7Permet de lancer la partie"
     - "&8≫ &e/hikabrain restart &8≫ &7Permet de relancer la partie"
-    - "&8≫ &e/hikabrain set team <bleu/rouge> &8≫ &7Permet de définir le point d'apparition des équipes"
+    - "&8≫ &e/hikabrain set team <blue/red> &8≫ &7Permet de définir le point d'apparition des équipes"
     - "&8≫ &e/hikabrain set waiting &8≫ &7Permet de définir le point de la file d'attente"
     - "&8≫ &e/hikabrain set maxplayers <nombre> &8≫ &7Permet de définir le nombre maximum de joueur par equipe"
